# gsample

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: gsamplebase.c  gsamplebase.h  gsamplederived.c  gsamplederived.h
